# Notebooks-Cheat-Sheet

./: .gitignore  00_consignes.md  00_datasets.md  00_plan_execution.md  00_prompt_nouvelle_session.md  00_status_notebooks.md  00_sujets_nouveaux.md  00_workflow_contract.md  README.md  pyproject.toml
03_md_ameliores/: BDD_DuckDB.md  BDD_Vectorielles.md  DE_Docling.md  DL_Deep_Learning_Maths.md  DL_JAX.md  DL_KAN_Kolmogorov_Arnold.md  DL_Keras.md  DL_PyTorch.md  DL_TensorFlow.md  Detection_Outliers.md  EDA_Analyse_Multivarie.md  EDA_Stats_Analyse_Desc_Visual.md  EDA_Visualisation_Introduction.md  Flask_API.md  INRIA_SKLearn_MOOC.md  ML_Apprentissage_par_Renforcement.md  ML_Bagging_Boosting.md  ML_Explication_Feature_Importance_Selection.md  ML_MLFlow_Bench.md  ML_Optimisation_de_Modeles.md  ML_Regression_Classification_Multiple.md  NLP_Classification_Smote.md  NLP_NER.md  NLP_NER_BiLSTM_CRF.md  NLP_Recherche_d_informations.md  NLP_Transformers.md  Structure_Generer_Donnees_Classification.md  Structures_DataFrame.md  TS_ARIMA.md  TS_Generer_Sequence.md  TS_Maintenance_Predictive.md  TS_Time_Series_Intro.md  TS_Time_Series_Overview.md  TdS_Introduction_Traitement_Signal.md
04_notebooks_finaux/: BDD_DuckDB.ipynb  BDD_Vectorielles.ipynb  DE_Docling.ipynb  DL_Deep_Learning_Maths.ipynb  DL_JAX.ipynb  DL_KAN_Kolmogorov_Arnold.ipynb  DL_Keras.ipynb  DL_PyTorch.ipynb  DL_TensorFlow.ipynb  Detection_Outliers.ipynb  EDA_Analyse_Multivarie.ipynb  EDA_Stats_Analyse_Desc_Visual.ipynb  EDA_Visualisation_Introduction.ipynb  Flask_API.ipynb  INRIA_SKLearn_MOOC.ipynb  ML_Apprentissage_par_Renforcement.ipynb  ML_Bagging_Boosting.ipynb  ML_Explication_Feature_Importance_Selection.ipynb  ML_MLFlow_Bench.ipynb  ML_Optimisation_de_Modeles.ipynb  ML_Regression_Classification_CV_GridSearch.ipynb  NLP_Classification_Smote.ipynb  NLP_NER.ipynb  NLP_NER_BiLSTM_CRF.ipynb  NLP_Transformers.ipynb  Structure_BDD_DataFrame.ipynb  Structure_Generer_Donnees_Classification.ipynb  Structures_Preprocessing.ipynb  TS_ARIMA.ipynb  TS_Generer_Sequence.ipynb  TS_Maintenance_Predictive.ipynb  TS_Time_Series_Intro.ipynb  TS_Time_Series_Overview.ipynb  TdS_Introduction_Traitement_Signal.ipynb
05_nouveaux_notebooks/: AI_Agents_Tools.md  AI_LLM_Finetuning_PEFT.md  AI_Local_LLMs.md  DS_Causal_Inference.md  MLE_Feature_Store.md  MLE_Online_Inference.md  MLOps_Drift_Monitoring.md  MLOps_Model_Registry.md
05_nouveaux_notebooks/ipynb/: AI_Multimodal_VLM.ipynb  AI_Prompt_Engineering.ipynb  DE_PySpark.ipynb  DS_Recommender_Systems.ipynb  MLE_AB_Testing.ipynb  MLE_Model_Serving.ipynb  MLOps_CICD_GitHub_Actions.ipynb  MLOps_Drift_Monitoring.ipynb  MLOps_Model_Registry.ipynb
0_DOCS/: 00_FAIT_A_FAIRE.md  00_REFAITS_A_REVERIFIER.md  00_REFERENCE_ORIGINAUX.md  00_VERIFICATION_BASE.md  00_consignes.md  00_plan_execution.md  00_prompt_nouvelle_session.md  00_status_notebooks.md  00_sujets_nouveaux.md  00_workflow_contract.md
0_Documentation/: 00_FAIT_A_FAIRE.md  00_REFAITS_A_REVERIFIER.md  00_REFERENCE_ORIGINAUX.md  00_VERIFICATION_BASE.md  00_blueprint_DL_frameworks.md  00_consignes.md  00_consignes_DL.md  00_consignes_refonte.md  00_critique.md  00_plan_execution.md  00_prompt_nouvelle_session.md  00_status_notebooks.md  00_sujets_nouveaux.md  00_valides.txt  00_workflow_contract.md
1_MES_NOTEBOOKS/md/: DE_Docling.md  INRIA_SKLearn_MOOC.md  ML_Apprentissage_par_Renforcement.md  ML_Bagging_Boosting.md  ML_Régression_&_Classification_Multiple.md  NLP_Classification_Smote.md  NLP_Classification_Spervisé.md  NLP_NER.md  NLP_NER_BiLSTM_CRF.md  Streamlit_brique.md  Structure_BDD_&_DataFrame.md  Structure_Generer_Données_pour_Classification.md  Structure_Pyhton.md  Structures_Preprocessing_Function_Utiles.md  TS_Generer_Sequence.md  TS_Maintenance_Prédictive.md
1_Old_Notebooks/: 00_REFERENCE_ORIGINAUX.md
Documentation/: 00_REFERENCE_ORIGINAUX.md  00_consignes.md  00_consignes_DL.md  00_consignes_refonte.md  00_prompt_nouvelle_session.md  00_sujets_nouveaux.md  00_workflow_contract.md
Notebook_2026/: COLAB_READINESS.md
apps/: README.md
scripts/: 01_unzip.sh  02_ipynb_to_md.sh  04_md_to_ipynb.sh  99_test_cell.sh  check_format.py  download_data.sh  etat_avancement.py  generate_new_notebooks.py  restore_originaux.sh  verifier_base.py
(+232 files in other folders)
