[project]
name = "notebooks-refonte"
version = "0.1.0"
description = "Refonte qualité des notebooks personnels (cheat-sheets / tutos / wikis techniques)"
readme = "00_consignes.md"
requires-python = ">=3.12"
dependencies = [
    "jupytext>=1.16",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "transformers>=5.9.0",
    "datasets>=4.8.5",
    "accelerate>=1.13.0",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "evaluate>=0.4.6",
    "bm25s>=0.3.9",
    "gliner>=0.2.24",
    "seqeval>=1.2.2",
    "imbalanced-learn>=0.14.1",
    "faiss-cpu>=1.14.2",
    "lancedb>=0.30.2",
    "mlflow>=3.12.0",
    "statsmodels>=0.14.6",
    "pmdarima>=2.1.1",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
    "optuna>=4.8.0",
    "shap>=0.51.0",
    "flask>=3.1.3",
    "streamlit>=1.57.0",
    "fastapi[standard]>=0.136.3",
    "pyjwt[crypto]>=2.13.0",
    "email-validator>=2.3.0",
    "pydantic-settings>=2.14.1",
    "pytorch-crf>=0.7.2",
]

[tool.jupytext]
formats = "ipynb,md"
notebook_metadata_filter = "-jupytext.text_representation.jupytext_version"

[tool.uv]
package = false
